- Fixed table being on left of screen 	- Created table_container div and set to 50% width, margin: auto to center
- Theory on why the printed table is smaller than table_header
	- Think the &nbsp creates an extra space that is visible if you look very closely

--- a/resources/css/calc.css
+++ b/resources/css/calc.css
@@ -23,7 +23,13 @@ align: center;
   width: 48%;
 }
 
+.table_container{
+margin: .5rem auto;
+width: 50%;
+
+}
 .table-header{
+
   clear:both;
   width: 600px;
   height: 50px;
@@ -33,12 +39,10 @@ align: center;
   width: 600px;
   height: 200px;
   overflow: auto;
-  
 
 }
 
 .table_info table{
-
   font-family: sans-serif;
   font-size: 13px;
   align: center;
